# bridge-grn

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
bridge_grn/: __init__.py  cli.py  contrast.py  data.py  metrics.py  model.py  trainer.py
configs/: default.yaml
data/: README.md  manifest.csv
docs/: input_format.md  quick_start.md
examples/demo/: README.md  val_edges.csv
examples/real_data_demo/: README.md  expression.csv  metadata.csv  query_edges.csv  test_edges.csv  tf_list.txt  train_edges.csv
scripts/: train_bridge_grn.py  transfer_finetune.py
